updated login/reg forms

--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,11 @@ input[type="submit"]{
     text-align: center;
 }
 
+#smoke_script {
+    color: dimgray;
+font-family: 'Flavors', cursive;
+}
+
 @media(min-width: 1000px) { 
     
     header{
