--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,8 @@ header h1 {
 .right {float: right;}
 .username { position: absolute; right: 50px;}
 
+a:hover {color: orange;}
+
 #days {
     height: 150px; 
 }
@@ -65,6 +67,12 @@ h1{
 
 h3{
     font-size: 50px;
+}
+
+h4 {
+    text-align: center;
+    font-family: 'Special Elite', cursive;
+    font-size: 40px;
 }
 #ashtray {
     font-family: 'Special Elite', cursive;
