--- a/css/style.css
+++ b/css/style.css
@@ -170,11 +170,13 @@ input[type="submit"]{
     text-align: center;
 }
 
-#smoke_script {
+#smoke_script {font-family: 'Flavors', cursive; }
+#smoke_script, #cancel {
     color: dimgray;
-font-family: 'Flavors', cursive;
 }
-#smoke_script:hover { color: #222; }
+#cancel { font-family: 'Carme', sans-serif; }
+#cancel, #smoke_script:hover { color: #222; }
+
 
 @media(min-width: 1000px) { 
     
