--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ header{
     color: #eee;
     padding: 10px; 
     position: fixed;
+    top: 0;
     z-index: 999;
     width: 100%;
     overflow: hidden;
@@ -159,22 +160,35 @@ input[type="submit"]{
     font-family: 'Special Elite', cursive;
 }
 
+
+
+
 .login{
-    width: 400px;
+    width: 100%;
+    text-align: center;
     
 }
+
+.login h1 { 
+    font-size: 120px;
+    text-align: center;
+}
+
 .login input{
     clear: both;
-    width: 200px;
+    width: 600px;
     margin: 10px;
     padding: 5px;
+    font-size: 55px;  
 }
 
 .login a {
     text-align: center;
     margin: 20px;
-    font-size: 30px;
+    font-size: 60px;
 }
+
+
 
 .available, .taken {
     padding: 10px;
@@ -205,6 +219,8 @@ input[type="submit"]{
 }
 #cancel { font-family: 'Carme', sans-serif; }
 #cancel, #smoke_script:hover, .fa-user-plus:hover { color: #222; }
+
+ 
 
 
 @media(min-width: 1000px) { 
@@ -248,4 +264,33 @@ input[type="submit"]{
     width: 450px;
 }
     .smokers{ font-size: 30px;}
+    
+    
+    
+.login{
+    width: 400px;
+}
+    
+    .login h1 { 
+    font-size: 60px;
+    text-align: center;
+}
+    
+.login input{
+    clear: both;
+    width: 200px;
+    margin: 10px;
+    padding: 5px;
+    font-size: 25px;
+}
+
+.login a {
+    text-align: center;
+    margin: 20px;
+    font-size: 30px;
+}
+
+    
+    
+    
 }
