--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ header h1 {
 }
 
 
-.message {
+.message, .error {
     text-align: center;
     background: #222;
     width: 200px;
@@ -46,6 +46,14 @@ header h1 {
     color: orange;
     font-weight: 600;
     font-size: 19px;
+}
+
+.error {
+    width: 90%;
+}
+
+.error ul {
+    text-align: left;
 }
 
 a:hover {color: orange;}
